# face_project

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ARCHITECTURE.md  ASYNC_CALLBACK_IMPLEMENTATION.md  Dockerfile  Dockerfile.silent  README.md  batch_test_videos.py  deploy.sh  diagnose_video.py  pyproject.toml  pyrightconfig.json  requirements-silent.txt  requirements.txt  run.py  ssh-config.txt  start_dev.sh
.github/workflows/: deploy.yml
data/: KeyPair-v2.pem
deploy/: .env.example  AGENTS.md
deploy/dev/: docker-compose.face.yaml  docker-compose.liveness.yaml  docker-compose.silent.yaml  docker-compose.yaml  down.sh  up.sh
deploy/pro/: .env.example  docker-compose.face.yaml  docker-compose.liveness.yaml  docker-compose.silent.yaml  docker-compose.yaml  down.sh  up.sh
deploy/scripts/: install_dev_deps.bat
deploy/tra/: docker-compose.face.yaml  docker-compose.liveness.yaml  docker-compose.silent.yaml  docker-compose.yaml  down.sh  up.sh
docs/: deployment.md  threshold_config_guide.md  下一步需求.md  人证比对方案.md
docs/superpowers/plans/: 2026-03-18-id-photo-preprocess.md  2026-03-24-video-liveness-silent-detection.md
docs/superpowers/specs/: 2026-03-18-id-photo-preprocess-design.md  2026-03-24-video-liveness-silent-detection-design.md
scripts/: AGENTS.md  analyze2.py  analyze_csv.py  export_docker_log.py  fetch_with_docker_log.py  log_parser.py  log_video_analyzer.py  remote_fetch.py  setup_ssh_access.sh  ssh_config.py  test_log_parser.py  test_threshold_validation.py  verify_final.py  verify_fix.py  verify_full_fix.py
scripts/manual_tests/: analyze_action_failure.py  analyze_ai_features.py  analyze_mouth_open.py  batch_test_videos.py  diagnose_webm.py  test_callback_network.py  test_frame_allocation.py  test_serial_detection.py  test_silent_multipath.py
scripts/manual_tests/remote_fetch_tests/: analyze_remote_videos.py  analyze_smoothing.py  debug_is_liveness.py  test_all_videos.py  test_quality_fix.py  test_with_log_analysis.py
scripts/workflow/: README.md  analyze_csv_detailed.py  auto_diagnose.py
tests/: AGENTS.md  __init__.py
tests/face/: test_face.py  test_id_preprocess.py  test_recognizer.py
tests/liveness/: test_async_processor.py  test_benchmark.py  test_callback.py  test_config.py  test_fix.py  test_frame_sampler.py  test_liveness.py  test_liveness_api.py  test_silent_integration.py
vrlFace/: AGENTS.md  README.md  __init__.py  config.py  demo.py  face_app.py  liveness_app.py  liveness_example.py  liveness_main.py  main.py  main_fastapi.py  models.py  save_csv.py  test_liveness.py
vrlFace/apps/: __init__.py  face_app.py  liveness_app.py  silent_app.py
vrlFace/face/: AGENTS.md  __init__.py  api.py  cli.py  config.py  id_preprocess.py  recognizer.py
vrlFace/liveness/: AGENTS.md  README.md  __init__.py  api.py  async_processor.py  benchmark_calibrator.py  benchmark_demo.py  benchmark_test.py  callback.py  cli.py  config.py  create_test_video.py  fast_detector.py  frame_sampler.py  fusion_engine.py  head_action.py  insightface_quality.py  mediapipe_detector.py  recorder.py  schemas.py  utils.py  video_analyzer.py  video_rotation.py
vrlFace/liveness/detectors/: __init__.py
vrlFace/liveness/quality/: __init__.py
vrlFace/silent_liveness/: __init__.py  api.py  config.py  deep_detector.py  detector.py  frequency_analyzer.py  schemas.py
